CSS change data no longer covers graph

--- a/app/assets/stylesheets/networkpages.scss
+++ b/app/assets/stylesheets/networkpages.scss
@@ -4,6 +4,7 @@
   position: relative;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 3vmax;
 }
 
 .networkBlock {
